#4 feat: criando o html

--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -12,6 +12,24 @@
 
     <!-- Aqui estará todo o código da página -->
     <main>
+        <div class="tela-login">
+            <section class="section-title">
+            <h1>Info<strong>WEG</strong></h1>
+            <h2 >Entrar</h2>
+        </section>
+
+        <form>
+            <input type="nome" placeholder="Usuário ou Email"><br><br>
+            <input type="senha" placeholder="Senha"> 
+            <p class="esqueceu-senha">Esqueceu sua senha?</p>
+            <button>Entrar</button>
+
+            <p>ou</p>
+
+            <button>Entrar com o Joinin</button><br><br>
+            <button>Primeiro acesso? Clique aqui</button>
+        </form>
+        </div>
 
     </main>
 
