#3 feat : HTML inicial + inicio de CSS

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 <head>
     <link rel="stylesheet" href="./assets/style/global.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./assets/style/components.css">
 </head>
 <body>
@@ -11,7 +12,8 @@
 
     <!-- Aqui estará todo o código da página -->
     <main>
-
+        <h1>BEM - VINDO(A)</h1>
+        <h2>nome!</h2>
     </main>
 
     <!-- Nessa linha o footer irá ser inserido automaticamente -->
