--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
      
     <!-- Nessa linha o header irá ser inserido automaticamente -->
-    <div id="header-container"></div>
+    <div id="header-container-inicial"></div>
 
     <!-- Aqui estará todo o código da página -->
     <main>
