--- a/pages/perfil/index.html
+++ b/pages/perfil/index.html
@@ -8,7 +8,7 @@
 <body>
     
     <!-- Nessa linha o header irá ser inserido automaticamente -->
-    <div id="header-container"></div>
+    <div id="header-container-telas"></div>
 
     <!-- Aqui estará todo o código da página -->
     <main>
@@ -18,8 +18,8 @@
     <!-- Nessa linha o footer irá ser inserido automaticamente -->
     <div id="footer-container"></div>
 
-    <script href="../../assets/script/include_components.js"></script>
-    <script href="../../assets/script/script.js"></script>
+    <script src="../../assets/script/include_components.js"></script>
+    <script src="../../assets/script/script.js"></script>
     
 </body>
 </html>
