#4 feat: finaliza o css da tela login mobile

--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -8,7 +8,6 @@
 <body>
    
     <!-- Nessa linha o header irá ser inserido automaticamente -->
-    <div id="header-container-telas"></div>
 
     <!-- Aqui estará todo o código da página -->
     <main>
@@ -28,7 +27,9 @@
             <button class="btn-entrar">Entrar</button></div>  
 
             <div class="text-ou">
+                <hr class="linha">
                 <p>ou</p>
+                <hr class="linha">
             </div>
 
             <button class="btn-joinin">Entrar com o Joinin</button><br><br>
