#4 feat: altera o link do botão acesso

--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -44,7 +44,7 @@
                     </div>
                    
                     <div class="btn-acesso">
-                        <a href="">Primeiro acesso? <span>Clique aqui.</span></a>
+                        <a href="../alterar_senha/">Primeiro acesso? <span>Clique aqui.</span></a>
                     </div>
                    
                 </div>
