--- a/index.html
+++ b/index.html
@@ -6,20 +6,17 @@
     <link rel="stylesheet" href="./assets/style/components.css">
 </head>
 <body>
-     
-    <!-- Nessa linha o header irá ser inserido automaticamente -->
-    <div id="header-container-inicial"></div>
-
     <!-- Aqui estará todo o código da página -->
     <main>
-        <h1>BEM - VINDO(A)</h1>
-        <h2>nome!</h2>
+        <section class="section-title">
+            <h1> <span class="light"> Info</span> <span class="bold"> WEG </span></h1>
+        </section>
+        <div class="bem-vindo">
+            <h1>BEM-VINDO(A)</h1>
+            <h1>nome!</h1>
+            <button class="sair">Sair</button>
+        </div>
     </main>
-
-    <!-- Nessa linha o footer irá ser inserido automaticamente -->
-    <div id="footer-container"></div>
-
-
     <script src="./assets/script/script.js"></script>
     <script src="./assets/script/include_components.js"></script>
 </body>
