#17 feat: começa o html da página alterar senha

--- a/pages/alterar_senha/index.html
+++ b/pages/alterar_senha/index.html
@@ -10,6 +10,35 @@
 
     <!-- Aqui estará todo o código da página -->
     <main>
+        <div class="seta-voltar">
+            <img src="../../assets/images/seta-voltar.png" alt="seta-voltar">
+        </div>
+         <div class="container">
+            <div class="alterar-senha">
+                <section class="section-title">
+                    <h1> <span class="light"> Info</span> <span class="bold"> WEG </span></h1>
+                </section>
+
+            <form> <h1>ALTERAR SENHA</h1> <br>
+                <div class="formulario">
+                    <input type="senha-atual" placeholder="Senha atual">
+                    <br>
+                    <input type="nova-senha" placeholder="Nova senha">
+                    <br>
+                    <input type="confimar-senha" placeholder="Confirmar senha">
+                    <br>
+                    <button> <a href="../login/"> Atualizar senha</a></button>
+               </div> 
+            </form>
+
+
+                <div class="algo-errado">
+                    <p href=""> Algo deu errado? Entre em contato com o <a href="">SUPORTE.</a></p>
+                </div>
+                    
+
+
+
 
     </main>
 
