--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -23,7 +23,7 @@
             <form class="formulario">
                 <div class="info-forms">
                     <input type="nome" placeholder="Usuário ou Email"><br><br>
-                    <input type="senha" placeholder="Senha">
+                    <input type="password" placeholder="Senha">
                      <div class="esqueceu-senha">
                         <a href="../esqueci_senha/">Esqueceu sua senha?</a>
                     </div>
