#17 feat: começa o css da página de alterar senha

--- a/pages/alterar_senha/index.html
+++ b/pages/alterar_senha/index.html
@@ -27,7 +27,7 @@
                     <br>
                     <input type="confimar-senha" placeholder="Confirmar senha">
                     <br>
-                    <button> <a href="../login/"> Atualizar senha</a></button>
+                    <a href="../login/"> Atualizar senha</a>
                </div> 
             </form>
 
