--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </div>
     </main>
 
+    <script>window.location.href = "../../pages/login/index.html";</script>
     <!-- Nessa linha o footer irá ser inserido automaticamente -->
     <div id="footer-container"></div>
 
