#17 feat: alterando nome para atualizar senha ao invés de alterar senha

--- a/pages/alterar_senha/index.html
+++ b/pages/alterar_senha/index.html
@@ -19,7 +19,7 @@
                     <h1> <span class="light"> Info</span> <span class="bold"> WEG </span></h1>
                 </section>
 
-            <form> <h1>ALTERAR SENHA</h1> <br>
+            <form> <h1>ATUALIZAR SENHA</h1> <br>
                 <div class="formulario">
                     <input type="senha-atual" placeholder="Senha atual">
                     <br>
