#4 fix: altera tamanho dos inputs na tela de login

--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -27,8 +27,8 @@
                      <div class="esqueceu-senha">
                         <a href="../esqueci_senha/">Esqueceu sua senha?</a>
                     </div>
-                    <div class="btn-entrar">
-                        <a href="../notificacao/">Entrar</a>
+                    <div class="class-btn-entrar">
+                        <a href="../notificacao/" class="btn-entrar">Entrar</a>
                     </div>
 
 
@@ -39,12 +39,12 @@
                     </div>
 
 
-                    <div class="btn-joinin">
-                        <a href=""> Entrar com o Joinin</a>
+                    <div class="class-btn-joinin">
+                        <a href="" class="btn-joinin"> Entrar com o Joinin</a>
                     </div>
                    
-                    <div class="btn-acesso">
-                        <a href="../alterar_senha/">Primeiro acesso? <span>Clique aqui.</span></a>
+                    <div class="class-btn-acesso">
+                        <a href="../alterar_senha/" class="btn-acesso">Primeiro acesso? <span>Clique aqui.</span></a>
                     </div>
                    
                 </div>
