#18 feat: termina a tela de esqueci senha, inserir codigo

--- a/pages/esqueci_senha/index.html
+++ b/pages/esqueci_senha/index.html
@@ -10,7 +10,40 @@
 
     <!-- Aqui estará todo o código da página -->
     <main>
+        <div class="seta-voltar">
+            <a href="../login/index.html"><img src="../../assets/images/seta-voltar.png" alt="seta-voltar"></a>
+        </div>
 
+        <div class="container">
+            <section class="section-title">
+                <h1> <span class="light"> Info</span> <span class="bold"> WEG </span></h1>
+            </section>
+
+            <section class="forms-esqueci-senha">
+                <div class="container-forms">
+
+                    <div class="titulo">
+                        <h2>ESQUECI MINHA SENHA</h2>
+                        <p>Insira o código que foi enviado ao seu email:</p>
+                        <h4>exemplo@gmail.com</h4>
+                    </div>
+                    
+                    <div class="codigo-numeros">
+                        <input type="text" id="codigo" placeholder="Insira o código aqui">
+                    </div>
+
+                    <div class="nao-recebeu-codigo">
+                        <p>Não recebeu o código? <span><a href="#">Clique aqui!</a></span></p>
+                        <p id="tempo-codigo">00:02:24</p>
+                    </div>
+
+                    <div class="botao-prosseguir">
+                        <a href="./alterar_senha_apos_esquecer.html">Prosseguir</a>
+                    </div>
+
+                </div>
+            </section>
+        </div>
     </main>
 
 
