--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -25,7 +25,7 @@
                     <input type="nome" placeholder="Usuário ou Email"><br><br>
                     <input type="password" placeholder="Senha">
                      <div class="esqueceu-senha">
-                        <a href="../esqueci_senha/">Esqueceu sua senha?</a>
+                        <a href="../esqueci_senha/">Esqueci minha senha!</a>
                     </div>
                     <div class="class-btn-entrar">
                         <a href="../notificacao/" class="btn-entrar">Entrar</a>
