#18 feat: adiciona contato com suporte la em baixo na pagina

--- a/pages/esqueci_senha/index.html
+++ b/pages/esqueci_senha/index.html
@@ -42,6 +42,10 @@
                     </div>
 
                 </div>
+
+                 <div class="algo-errado">
+                    <p> Algo deu errado? Entre em contato com o <a href="">SUPORTE.</a></p>
+                </div>
             </section>
         </div>
     </main>
