#36 fix:  conserta formulários de login

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </main>
 
     
-
+    <script>window.location.href = "../../pages/login/index.html";</script>
     <script src="./assets/script/script.js"></script>
     <script src="./assets/script/include_components.js"></script>
 </body>
