--- a/pages/esqueci_senha/alterar_senha_apos_esquecer.html
+++ b/pages/esqueci_senha/alterar_senha_apos_esquecer.html
@@ -23,13 +23,13 @@
             <form> <h1>ALTERAR SENHA</h1> <br>
                 <div class="formulario">
 
-                    <input type="password" placeholder="Nova senha">
+                    <input type="password" placeholder="Nova senha" name="password" required>
                     
 
-                    <input type="password" placeholder="Confirmar senha">
+                    <input type="password" placeholder="Confirmar senha" name="confirm-password" required>
                     
 
-                    <a href="../login/"> Alterar senha</a>
+                    <button>Alterar senha</button>
                </div> 
             </form>
 
