#36 fix:  conserta formulários de login

--- a/pages/alterar_senha/index.html
+++ b/pages/alterar_senha/index.html
@@ -20,7 +20,7 @@
                 </section>
 
             <form> <h1>ATUALIZAR SENHA</h1> <br>
-                <div class="formulario">
+                <div class="formulario" method="POST">
 
                     <input type="password" placeholder="Senha atual" name="senha-atual" required>
                     
@@ -37,7 +37,9 @@
 
 
                 <div class="algo-errado">
-                    <p href=""> Algo deu errado? Entre em contato com o <a href="">SUPORTE.</a></p>
+                    <p> Algo deu errado? Entre em contato com o <a href="">SUPORTE.</a></p>
+                </div>
+
                 </div>
                     
 
