--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -20,10 +20,10 @@
 
 
 
-            <form class="formulario">
+            <form class="formulario" id="forms-login" method="GET">
                 <div class="info-forms">
-                    <input type="nome" name="usuario" placeholder="Usuário ou Email" required><br><br>
-                    <input type="password" name="password" placeholder="Senha"  required>
+                    <input type="nome" name="usuario" placeholder="Usuário ou Email" id="usuario" required><br><br>
+                    <input type="password" name="password" placeholder="Senha" id="senha" required>
 
                     <p id="usuario-incorreto">Usuario ou senha incorretos! Tente novamente</p>
 
@@ -31,7 +31,7 @@
                         <a href="../esqueci_senha/">Esqueci minha senha!</a>
                     </div>
                     <div class="class-btn-entrar">
-                        <button class="btn-entrar">Entrar</button>
+                        <button class="btn-entrar" id="entrar">Entrar</button>
                     </div>
 
 
@@ -59,6 +59,7 @@
 
     <script src="../../assets/script/include_components.js"></script>
     <script src="../../assets/script/script.js"></script>
+    <script src="./script.js"></script>
    
 </body>
 </html>
