feat: ajusta o front para receber dados do back

--- a/pages/alterar_senha/index.html
+++ b/pages/alterar_senha/index.html
@@ -50,6 +50,7 @@
 
 
     <script src="../../assets/script/include_components.js"></script>
+    <script src="../../assets/script/config.js"></script>
     <script src="../../assets/script/script.js"></script>
     
 </body>
