--- a/pages/bem_vindos/index.html
+++ b/pages/bem_vindos/index.html
@@ -21,6 +21,7 @@
     <!-- Nessa linha o footer irá ser inserido automaticamente -->
     <div id="footer-container"></div>
 
+    <script src="../../assets/script/config.js"></script>
     <script src="../../assets/script/script.js"></script>
     <script src="../../assets/script/include_components.js"></script>
 </body>
