--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -20,9 +20,9 @@
 
 
 
-            <form class="formulario" id="forms-login" method="GET">
+            <form class="formulario" id="forms-login" method="POST">
                 <div class="info-forms">
-                    <input type="nome" name="usuario" placeholder="Usuário ou Email" id="usuario" required><br><br>
+                    <input type="nome" name="email" placeholder="Usuário ou Email" id="email" required><br><br>
                     <input type="password" name="password" placeholder="Senha" id="senha" required>
 
                     <p id="usuario-incorreto">Usuario ou senha incorretos! Tente novamente</p>
@@ -58,6 +58,7 @@
 
 
     <script src="../../assets/script/include_components.js"></script>
+    <script src="../../assets/script/config.js"></script>
     <script src="../../assets/script/script.js"></script>
     <script src="./script.js"></script>
    
