--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     
     <script>window.location.href = "../../pages/login/index.html";</script>
+    <script src="./assets/script/config.js"></script>
     <script src="./assets/script/script.js"></script>
     <script src="./assets/script/include_components.js"></script>
 </body>
