--- a/pages/esqueci_senha/index.html
+++ b/pages/esqueci_senha/index.html
@@ -53,6 +53,7 @@
 
 
     <script src="../../assets/script/include_components.js"></script>
+    <script src="../../assets/script/config.js"></script>
     <script src="../../assets/script/script.js"></script>
     <script src="./script.js"></script>
     
