--- a/pages/notificacao/index.html
+++ b/pages/notificacao/index.html
@@ -19,6 +19,7 @@
     <div id="footer-container"></div>
 
     <script src="../../assets/script/include_components.js"></script>
+    <script src="../../assets/script/config.js"></script>
     <script src="../../assets/script/script.js"></script>
 </body>
 </html>
