#36 feat: adiciona tela de loading ao tentar logar

--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -17,8 +17,10 @@
                     <h2 >ENTRAR</h2>
                 </section>
 
-
-
+                <div id="loading-spinner" style="display:none;" class="loading-spinner">
+                    <div class="spinner"></div>
+                    <p>Carregando...</p>
+                </div>
 
             <form class="formulario" id="forms-login" method="POST">
                 <div class="info-forms">
