#36 fix: conserta validação de token

--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -62,6 +62,7 @@
     <script src="../../assets/script/include_components.js"></script>
     <script src="../../assets/script/config.js"></script>
     <script src="../../assets/script/script.js"></script>
+    <script src="../../assets/script/auth_check.js"></script>
     <script src="./script.js"></script>
    
 </body>
