--- a/pages/bem_vindos/index.html
+++ b/pages/bem_vindos/index.html
@@ -23,6 +23,7 @@
 
     <script src="../../assets/script/config.js"></script>
     <script src="../../assets/script/script.js"></script>
+    <script src="../../assets/script/auth_check.js"></script>
     <script src="../../assets/script/include_components.js"></script>
 </body>
 </html>
