--- a/pages/esqueci_senha/alterar_senha_apos_esquecer.html
+++ b/pages/esqueci_senha/alterar_senha_apos_esquecer.html
@@ -48,6 +48,7 @@
     <script src="../../assets/script/include_components.js"></script>
     <script src="../../assets/script/config.js"></script>
     <script src="../../assets/script/script.js"></script>
+    <script src="../../assets/script/auth_check.js"></script>
     
 </body>
 </html>
