--- a/pages/notificacao/index.html
+++ b/pages/notificacao/index.html
@@ -21,5 +21,6 @@
     <script src="../../assets/script/include_components.js"></script>
     <script src="../../assets/script/config.js"></script>
     <script src="../../assets/script/script.js"></script>
+    <script src="../../assets/script/auth_check.js"></script>
 </body>
 </html>
