--- a/pages/bem_vindos/index.html
+++ b/pages/bem_vindos/index.html
@@ -25,5 +25,6 @@
     <script src="../../assets/script/script.js"></script>
     <script src="../../assets/script/auth_check.js"></script>
     <script src="../../assets/script/include_components.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
