#36 style: estiliza a tela de bem vindos

--- a/pages/bem_vindos/index.html
+++ b/pages/bem_vindos/index.html
@@ -13,7 +13,11 @@
         </section>
         <div class="bem-vindo">
             <h1>BEM-VINDO(A)</h1>
-            <h1>nome!</h1>
+            <h2>nome!</h2>
+            <div id="links">
+                <a href="../../index.html" >Página Inicial</a>
+                <a href="../login/index.html" id="logout-link">Sair</a>
+            </div>
         </div>
     </main>
 
