--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -25,7 +25,11 @@
             <form class="formulario" id="forms-login" method="POST">
                 <div class="info-forms">
                     <input type="nome" name="email" placeholder="Usuário ou Email" id="email" required><br><br>
-                    <input type="password" name="password" placeholder="Senha" id="senha" required>
+                    <div style="position:relative; width:100%;">
+                        <input type="password" name="password" placeholder="Senha" id="senha" required style="width:100%;">
+                        <span id="toggle-password" style="position:absolute; right:15px; top:50%; transform:translateY(-50%); cursor:pointer; font-size:18px; color:#005691;">👁️</span>
+                    </div>
+                    <div id="capslock-warning" style="display:none; color:#d32f2f; font-size:13px; margin-top:5px;">Caps Lock está ativado!</div>
 
                     <p id="usuario-incorreto">Usuario ou senha incorretos! Tente novamente</p>
 
