#36 style: adiciona olhinho no login para ver senha

--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -29,7 +29,7 @@
                         <input type="password" name="password" placeholder="Senha" id="senha" required style="width:100%;">
                         <span id="toggle-password" style="position:absolute; right:15px; top:50%; transform:translateY(-50%); cursor:pointer; font-size:18px; color:#005691;">👁️</span>
                     </div>
-                    <div id="capslock-warning" style="display:none; color:#d32f2f; font-size:13px; margin-top:5px;">Caps Lock está ativado!</div>
+                    <div id="capslock-warning" >Caps Lock está ativado!</div>
 
                     <p id="usuario-incorreto">Usuario ou senha incorretos! Tente novamente</p>
 
