--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -19,7 +19,7 @@
 
                 <div id="loading-spinner" style="display:none;" class="loading-spinner">
                     <div class="spinner"></div>
-                    <p>Carregando...</p>
+                    <p style="font-family: 'Kumbh Sans', sans-serif;">Carregando...</p>
                 </div>
 
             <form class="formulario" id="forms-login" method="POST">
