#36 fix: arruma links da tela de bem vindos

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <!-- Aqui estará todo o código da página -->
     <main>
-        
+        <h1>PAGINA INICIAL DE INFORMATIVOS</h1>
     </main>
 
     
