cria direcionamento pra tela de perfil

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="pt-br">
 <head>
     <link rel="stylesheet" href="./assets/style/global.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="./assets/style/components.css">
+<link rel="stylesheet" href="./assets/style/components.css">
 </head>
 <body>
     <!-- Aqui estará todo o código da página -->
     <main>
         <h1>PAGINA INICIAL DE INFORMATIVOS</h1>
+        <a href="./pages/perfil/index.html" id="perfilUsuario">Perfil de Usuário</a>
     </main>
 
     
