--- a/pages/perfil/index.html
+++ b/pages/perfil/index.html
@@ -10,7 +10,7 @@
     <!-- Nessa linha o header irá ser inserido automaticamente -->
              <div class="header">
                 <div class="perfil">
-                <a href="../notificacao/index.html">  <img src="../../assets/images/seta-voltar.png" alt="seta-voltar"></a>
+                <a href="../../index.html">  <img src="../../assets/images/seta-voltar.png" alt="seta-voltar"></a>
                 <p>Perfil</p>
                 </div>
                 <h1> <span class="light"> Info</span> <span class="bold"> WEG </span></h1>
@@ -25,7 +25,7 @@
             </div>
             <div class="nome-email">
                 <h1>Nome do Aluno</h1>
-                <p>aluno@gmail.com</p>
+                <p id="nomeAluno">aluno@gmail.com</p>
             </div>
         </div>
         </section>
