--- a/pages/perfil/index.html
+++ b/pages/perfil/index.html
@@ -124,6 +124,7 @@
     <script src="../../assets/script/config.js"></script>
     <script src="../../assets/script/script.js"></script>
     <script src="../../assets/script/auth_check.js"></script>
+    <script src="./script.js"></script>
     
 </body>
 </html>
