--- a/pages/perfil/index.html
+++ b/pages/perfil/index.html
@@ -112,7 +112,7 @@
         </section>
 
         <div class="botao">
-            <button><a href="../login/index.html" class="btn-sair">Sair</a></button>
+            <button><a href="../login/index.html" id="logout-link" class="btn-sair">Sair</a></button>
         </div>
 
     </main>
