#55 feat: botao de sair no perfil funcionando

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <!-- Aqui estará todo o código da página -->
     <main>
         <h1 id="h1PaginaInicialTeste">PAGINA INICIAL DE INFORMATIVOS</h1>
-        <a href="./pages/perfil/index.html" id="perfilUsuario">Perfil de Usuário</a>
+        <a href="./pages/perfil/index.html" id="linkTelaInicial">Perfil de Usuário</a>
+        <a href="./pages/notificacao/index.html" id="linkTelaInicial">Tela de Notificações</a>
     </main>
 
     
