#55 fix: conserta responsividade da tela de login e esconde links inuteis

--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -34,14 +34,14 @@
                     <p id="usuario-incorreto">Usuario ou senha incorretos! Tente novamente</p>
 
                      <div class="esqueceu-senha">
-                        <a href="../esqueci_senha/">Esqueci minha senha!</a>
+                        <a href="../esqueci_senha/" style="display: none;">Esqueci minha senha!</a>
                     </div>
                     <div class="class-btn-entrar">
                         <button class="btn-entrar" id="entrar">Entrar</button>
                     </div>
 
 
-                    <div class="text-ou">
+                    <div class="text-ou" style="display: none;">
                         <hr class="linha">
                         <p>ou</p>
                         <hr class="linha">
@@ -49,11 +49,11 @@
 
 
                     <div class="class-btn-joinin">
-                        <a href="" class="btn-joinin"> Entrar com o Joinin</a>
+                        <a href="" class="btn-joinin" style="display: none;"> Entrar com o Joinin</a>
                     </div>
                    
                     <div class="class-btn-acesso">
-                        <a href="../alterar_senha/" class="btn-acesso">Primeiro acesso? <span>Clique aqui.</span></a>
+                        <a href="../alterar_senha/" class="btn-acesso" style="display: none;">Primeiro acesso? <span>Clique aqui.</span></a>
                     </div>
                    
                 </div>
