#55 style: estiliza botao de entrar de login no desktop

--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -37,7 +37,7 @@
                         <a href="../esqueci_senha/" style="display: none;">Esqueci minha senha!</a>
                     </div>
                     <div class="class-btn-entrar">
-                        <button class="btn-entrar" id="entrar">Entrar</button>
+                        <button class="btn-entrar" id="entrar" style="cursor: pointer;">Entrar</button>
                     </div>
 
 
