#55 fix: corrige caminhos de arquivos

--- a/pages/notificacao/index.html
+++ b/pages/notificacao/index.html
@@ -16,7 +16,7 @@
 
        
         <header class="header">
-            <img src="/assets/images/Vector.svg" alt="Voltar" class="icon-back" id="btn-back">
+            <a href="../../index.html"><img src="/assets/images/Vector.svg" alt="Voltar" class="icon-back" id="btn-back"></a>
             <img src="/assets/images/Group 49.svg" alt="Logo InfoWEG" class="logo">
         </header>
 
